# yzta-bootcamp-grup74

./: .gitignore  CLAUDE.md  README.md  TECHSTACK.md  architecture.md  execution.md  overview.md
planning/: CLAUDE.md  README.md  RESEARCH_STRATEGY.md  ROADMAP.md  TRACEABILITY.md  bootcamp-adaptation-review.md  data-architecture.md  data-pipeline-steps.md  early-phase-plan-credit-offer-optimization.md  feature-schema.md
planning/00-program/: charter.md  open-questions.md  raci.md  workplan.md
planning/01-hypothesis-validation/: h01.md  h02.md  h03.md  h04.md  h05.md  h06.md  h07.md  h08.md  h09.md  h10.md  h11.md  h12.md  h13.md  h14.md  validation-plan.md
planning/02-stakeholders/: guide-business-commercial.md  guide-compliance-legal.md  (+9 more)
product/: PRODUCT_TECH_README.md  README.md
product/02-ai-agents/: pyproject.toml  requirements-core.txt
product/02-ai-agents/aks_core/: __init__.py  paths.py  politika.py
product/02-ai-agents/aks_core/agents/: orkestrator.py  skorlama_agent.py  veri_agent.py
product/02-ai-agents/aks_core/artifacts/: aks_model.joblib  aks_model.json  aks_model_lr.joblib  aks_model_meta.json  arka_plan_ornek.json  degerlendirme_raporu.json  egitim_manifest.json  formulasyon_b.json  kalibrasyon.json  metrikler.json
product/02-ai-agents/aks_core/model/: aciklama.py  adalet.py  circularity_ablation.py  degerlendirme.py  egitim.py  etiketleme.py  formulasyon_b.py  is_etkisi.py  kalibrasyon.py  kayit.py
product/02-ai-agents/aks_core/ozellik/: cikarim.py
product/02-ai-agents/tests/: test_aks_core.py
sprints/: requirements.txt
(+91 files in other folders)
