[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aks-core"
version = "3.0.0"
description = "Alternatif Kapasite Skoru — veri, ML, açıklanabilirlik ve agent çekirdeği"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.52",   # 0.49 ve altı xgboost>=3 base_score formatını okuyamıyor
    "joblib>=1.3",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aks_core*"]

[tool.setuptools.package-data]
aks_core = ["artifacts/*.joblib", "artifacts/*.json"]
